--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bluegg-toggle",
   "version": "0.0.1",
   "description": "Basic JS toggle on and off using data attributes",
-  "main": "dist/index.js",
+  "main": "./dist/index.js",
   "scripts": {
     "build": "node_modules/.bin/babel --plugins add-module-exports src/index.js > dist/index.js",
     "prepublish": "npm run build"
@@ -14,9 +14,9 @@
   "author": "bluegg",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Bluegg/bluegg-module-boilerplate/issues"
+    "url": "https://github.com/Bluegg/bluegg-toggle/issues"
   },
-  "homepage": "https://github.com/Bluegg/bluegg-module-boilerplate#readme",
+  "homepage": "https://github.com/Bluegg/bluegg-toggle#readme",
   "devDependencies": {
     "babel-cli": "^6.10.1",
     "babel-plugin-add-module-exports": "^0.1.2",
